--- a/public/CSS/lista_juegos.css
+++ b/public/CSS/lista_juegos.css
@@ -23,6 +23,8 @@
 .filtros_desplegable .filtros_opciones{
     display: flex;
     flex-direction: column;
+
+    margin: 5%;
 }
 
 .filtros_desplegable.active{
@@ -68,6 +70,7 @@
     display: flex;
     border-radius: 25px;
     padding: 2%;
+    margin: 2%;
 
     max-height: fit-content;
 
@@ -99,6 +102,10 @@
 
 .eliminar_filtro{
     cursor: pointer;
+}
+
+#resetFiltros{
+    text-decoration: underline;
 }
 
 /* Lista de Juegos */
