--- a/public/CSS/lista_ventas.css
+++ b/public/CSS/lista_ventas.css
@@ -29,7 +29,8 @@
     display: flex;
     border-radius: 25px;
     padding: 2%;
-
+    margin: 2%;
+    
     max-height: fit-content;
 
     background-color: var(--color-secundario);
@@ -69,6 +70,8 @@
 
         align-self: start;
 
+        width: 100%;
+
         overflow: hidden;
         max-height: 0;
         transition: max-height 0.5s ease;
@@ -83,6 +86,8 @@
     .filtros_desplegable .filtros_opciones{
         display: flex;
         flex-direction: column;
+
+        margin: 5%;
     }
 
     .active{
