--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -1,9 +1,14 @@
 /* Página CSS de Main */
 
+body{
+    padding: 5px;
+}
+
 .landing{
     display: flex;
-    align-items: center;
-    justify-content: start;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-evenly;
 
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("/TDG/public/IMG/main-landing-ordered-games.webp");
     background-size: cover;
@@ -11,24 +16,23 @@
 
     width: 100%;
     height: 50vh;
-}
-
-.landing-texto{
-    width: 100%;
 
     padding: 5%;
 }
 
 .landing .boton-ver-juegos{
-    display: inline;
-
-    padding: 1%;
+    padding: 8%;
+    width: 116%;
 
     border-radius: 20px;
 
     background-color: var(--color-primario);
 
-    color: var(--color-texto);
+    color: var(--color-boton-texto);
+}
+
+.enlace-main i{
+    font-size: 200%;
 }
 
 /* Juegos recien Añadidos */
@@ -132,6 +136,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.lista_reviews h2{
+    align-self: self-start;
 }
 
 .review{
