--- a/public/CSS/lista_juegos.css
+++ b/public/CSS/lista_juegos.css
@@ -68,14 +68,9 @@
 
 .btn_filtros{
     display: flex;
-    border-radius: 25px;
-    padding: 2%;
     margin: 2%;
-
     max-height: fit-content;
 
-    background-color: var(--color-secundario);
-    color: var(--color-boton-texto);
 }
 
 .btn_filtros i{
@@ -90,7 +85,7 @@
     max-height: fit-content;
     min-height: fit-content;
 
-    color: var(--color-boton-texto) !important;
+    color: var(--color-texto) !important;
 }
 
 #filtros_icon{
@@ -134,15 +129,17 @@
     border-radius: 10px;
 
     width: 100%;
-    margin: 0px 5px 30px 5px;
+    margin: 20px 5px 30px 5px;
 
     background-color: var(--color-tarjeta);
 
+    position: relative;
     
 }
 
 .juego img{
     width: 100%;
+    max-height: 300px;
 
     border-top-right-radius: 8px;
     border-top-left-radius: 8px;
@@ -181,6 +178,9 @@
     justify-content: space-around;
     align-items: center;
     flex-wrap: nowrap;
+
+    position: inherit;
+    margin-top: auto;
 }
 
 .btn_listas i{ /* Botones de Agregar a la lista */
@@ -234,6 +234,29 @@
     align-items: center;
 
     margin-top: 20px;
+}
+
+@media screen and (min-width: 1024px) {
+
+    #list_juegos{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+
+        width: 90%;
+    }
+
+    .juego{
+        min-height: 100%;
+    }
+
+    .juego:last-child{
+        grid-column: 1 / -1;  /* Hace que el último elemento ocupe ambas columnas */
+        justify-self: center; 
+
+        width: 50%;
+    }
+    
 }
 
 @media screen and (min-width: 425px) and (max-width: 768px) {
