--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -178,6 +178,10 @@ body{
     margin: 0;
 }
 
+.review_ver_mas_container *{
+    color: var(--color-texto);
+}
+
 /* Media Querys */
 
 @media screen and (min-width: 640px){
