--- a/public/CSS/panelAdmin.css
+++ b/public/CSS/panelAdmin.css
@@ -72,7 +72,7 @@ li{
     align-items: center;
     flex-wrap: wrap;
 
-    background-color: var(--color-tarjeta-secundario);
+    background: linear-gradient(90deg, rgba(28, 28, 30, 1) 20%, rgba(166, 166, 166, 1) 100%);
 
     border-radius: 20px;
     border: 2px solid black;
