--- a/public/CSS/header.css
+++ b/public/CSS/header.css
@@ -199,8 +199,8 @@
 
     text-align: start;
 
-    margin-bottom: 2%;
-    margin-left: 5vh;
+    /* margin-bottom: 2%;
+    margin-left: 5vh; */
 }
 
 .link-hamburguesa i{
