--- a/public/CSS/header.css
+++ b/public/CSS/header.css
@@ -244,7 +244,7 @@
 }
 
 /* Media Queries */
-@media screen and (min-width: 1101px) {
+@media screen and (min-width: 1200px) {
     .header-movil{
         display: none;
     }
@@ -264,8 +264,8 @@
 
         padding: 10px 20px;
 
-        width: 100vw;
-        max-width: 100vw;
+        width: 100%;
+        min-width: 98vw;
 
         color: var(--color-texto);
         background-color: var(--color-fondo);
