--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -107,11 +107,16 @@ body{
     border: 5px solid transparent;
 }
 
+.card-item a{
+    display: contents;
+}
+
 /* Ultimos Productos */
 
 .ultimos_productos{
     width: 100%;
 }
+
 
 /* Reviews */
 
@@ -136,6 +141,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
 }
 
 .lista_reviews h2{
