--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -136,7 +136,7 @@ body{
     border-radius: 20px;
 }
 
-.lista_reviews{
+#lista_reviews{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -144,7 +144,7 @@ body{
     width: 100%;
 }
 
-.lista_reviews h2{
+#lista_reviews h2{
     align-self: self-start;
 }
 
