--- a/public/CSS/tablaAdmin.css
+++ b/public/CSS/tablaAdmin.css
@@ -106,6 +106,34 @@ body{
    font-size: 200%;
 }
 
+/* Dropdown */
+
+.dropdown-menu {
+  position: absolute;
+  right: 0;
+  left: auto;
+  width: fit-content;
+}
+
+.dropdown-item:hover{
+    background-color: var(--color-primario);
+    color: var(--color-texto);
+}
+
+/* Modal de Generos y Plataformas */
+
+#modificacionGeneroPlat .modal-dialog{
+    max-width: 80vw;
+}
+
+.plataformasChecks, .generosChecks{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+
+    width: 100%;
+
+}
+
 footer{
     align-self: center;
 }
