--- a/public/CSS/footer.css
+++ b/public/CSS/footer.css
@@ -9,7 +9,8 @@ footer{
 }
 
 footer p{
-    color: var(--color-boton-texto);
+  color: var(--color-boton-texto);
+  margin: 0;
 }
 
 footer div{
@@ -32,7 +33,7 @@ footer a {
   box-sizing: border-box;
 }
 
-.icono {
+footer .icono {
   color: var(--color-boton-texto);
   font-size: 24px;           /* Tamaño del ícono */
 }
