--- a/public/CSS/lista_reviews.css
+++ b/public/CSS/lista_reviews.css
@@ -46,6 +46,7 @@
     flex-direction: column;
 
     width: 90%;
+    max-width: 90vw;
     background-color: var(--color-tarjeta);
 
     border-radius: 20px;
@@ -89,8 +90,8 @@
 }
 
 .review_texto{
-    width: fit-content;
     margin: 2%;
+    word-wrap: break-word;
 }
 
 .review_footer{
