--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -66,6 +66,7 @@ body{
 
     width: 40vw;
     height: max-content;
+    min-height: 190px;
 
     padding: 10px;
     margin: 10px;
@@ -160,6 +161,11 @@ body{
     margin: 3%;
 }
 
+.review_texto{
+    margin: 2%;
+    word-wrap: break-word;
+}
+
 .cabecera_review img{
     width: 15%;
     clip-path: circle(50% at 50% 50%);
@@ -229,6 +235,7 @@ body{
     .recien_añadidos__item{
         width: 30vw;
         transition: 0.3s;
+        min-height: 210px;
     }
 
     .recien_añadidos__item:hover{
