--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -7,7 +7,7 @@
     --color-primario: var(--color-borde-neon);
     --color-secundario: var(--color-borde-neon);
     
-    --color-fondo: linear-gradient(180deg,rgba(28, 28, 30, 1) 20%, rgba(166, 166, 166, 1) 100%);
+    --color-fondo: linear-gradient(180deg,#1c1c1e 20%, #a6a6a6 100%);
     --color-texto: #FFFFFF;
     --color-texto-secundario: #B0BEC5;
     
