--- a/public/CSS/footer.css
+++ b/public/CSS/footer.css
@@ -1,3 +1,4 @@
+/* Página Css del Footer */
 footer{
     display: flex;
     justify-content: space-evenly;
@@ -24,9 +25,9 @@ footer a {
   align-items: center;
   justify-content: center;
 
-  width: 50px;               /* Tamaño fijo */
+  width: 50px;               
   height: 50px;
-  margin: 3px;               /* Espaciado entre íconos */
+  margin: 3px;               
   border-radius: 50%;
   border: 2px solid black;
   text-decoration: none;
@@ -35,5 +36,5 @@ footer a {
 
 footer .icono {
   color: var(--color-boton-texto);
-  font-size: 24px;           /* Tamaño del ícono */
+  font-size: 24px;
 }
