--- a/public/CSS/ventas_perfil.css
+++ b/public/CSS/ventas_perfil.css
@@ -1,3 +1,6 @@
+/* Página Css de ventas_perfil*/
+
+/* Parte del Perfil */
 #perfil {
     display: flex;
     flex-direction: column;
@@ -9,6 +12,7 @@
     width: 60%;
 }
 
+/* Imagen de Perfil */
 .perfil_imagen{
     max-width: 200px;
     clip-path: circle(100px at 50% 50%);
@@ -18,6 +22,7 @@
     align-self: center;
 }
 
+/* Ventas y Compras */
 .ventas_compras{
     display: flex;
     flex-direction: column;
@@ -48,6 +53,7 @@
     justify-content: center;
 }
 
+/* Venta y Compra individual */
 .venta a, .compra a{
     display: flex;
     flex-direction: column;
